--- a/css/iframe.dev.css
+++ b/css/iframe.dev.css
@@ -48,13 +48,12 @@ a img {
 /* IFRAME STYLES */
 
 body {
+	padding: 5px;
 	font-family: Consolas, Monaco, Courier, monospace;
 	font-size: 12px;
 	color: #666;
 }
 table {
-	margin-top: 5px;
-	margin-left: 5px;
 	font-size: 12px;
 }
 th {
