--- a/css/debug-bar-console.dev.css
+++ b/css/debug-bar-console.dev.css
@@ -1,12 +1,17 @@
-#debug-bar-console-wrap,
-#debug-bar-console-output {
-	border: 1px solid #ccc;
-	position: absolute;
-	top: 10px;
-	bottom: 10px;
+.debug-bar-console-on-php,
+.debug-bar-console-on-mysql {
+	display: none;
+}
+
+.debug-bar-console-mode-php .debug-bar-console-on-php,
+.debug-bar-console-mode-mysql .debug-bar-console-on-mysql {
+	display: block;
 }
 
 #debug-bar-console-output {
+	position: absolute;
+	top: 10px;
+	bottom: 10px;
 	right: 10px;
 	left: 50%;
 	margin-left: 10px;
@@ -20,49 +25,113 @@
 }
 
 #debug-bar-console-wrap {
-	padding: 5px;
+	position: absolute;
+	top: 10px;
+	bottom: 10px;
 	left: 10px;
 	right: 50%;
 	margin-right: 10px;
+}
+
+.debug-bar-console-panel {
+	position: absolute;
+	top: 27px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 5px;
+	border: 1px solid #ccc;
 	box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
 	-moz-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
 	-webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
 }
 
-#debug-bar-console-input,
-#debug-bar-console-output {
-	font-family: Consolas, Monaco, Courier, monospace;
+.debug-bar-console-input,
+#debug-bar-console-output iframe {
+	font-family: Consolas, Monaco, monospace;
 }
 
-#debug-bar-console-input {
+.debug-bar-console-input {
 	width: 100%;
 	height: 100%;
 	padding: 0;
 	margin: 0;
 	background: transparent;
 	border: 0;
-	font-family: Consolas, Monaco, Courier, monospace;
 	box-shadow: none;
 	-moz-box-shadow: none;
 	-webkit-box-shadow: none;
 }
 
+.debug-bar-console-tabs {
+	margin: 0;
+}
+
+.debug-bar-console-tab {
+	display: block;
+	float: left;
+	border-style: solid;
+	border-color: transparent;
+	border-width: 1px 1px 0;
+	color: #21759B;
+	font-size: 12px;
+	line-height: 16px;
+	padding: 5px 10px;
+	text-decoration: none;
+	font-weight: bold;
+	margin: 0 6px 0 0;
+	cursor: pointer;
+	-moz-border-radius: 3px 3px 0 0;
+	-webkit-border-top-left-radius: 3px;
+	-webkit-border-top-right-radius: 3px;
+	-khtml-border-top-left-radius: 3px;
+	-khtml-border-top-right-radius: 3px;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
+}
+.debug-bar-console-tab:hover {
+	color: #d54e21;
+}
+.debug-bar-console-tab-active {
+	border-color: #ccc;
+	background-color: #eee;
+	background-image: -ms-linear-gradient(top, #f9f9f9, #ececec); /* IE10 */
+	background-image: -moz-linear-gradient(top, #f9f9f9, #ececec); /* Firefox */
+	background-image: -o-linear-gradient(top, #f9f9f9, #ececec); /* Opera */
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#ececec)); /* old Webkit */
+	background-image: -webkit-linear-gradient(top, #f9f9f9, #ececec); /* new Webkit */
+	background-image: linear-gradient(top, #f9f9f9, #ececec); /* proposed W3C Markup */
+}
+.debug-bar-console-tab-active,
+.debug-bar-console-tab-active:hover {
+	color: #555;
+}
+
+#debug-bar-console-output strong {
+	font-size: 13px;
+	color: #555;
+}
+
 #querylist #debug-bar-console-submit {
 	position: absolute;
-	bottom: 10px;
+	top: 10px;
 	right: 50%;
 	margin-right: 10px;
-	font-size: 16px;
+	font-size: 12px;
+	line-height: 16px;
 	font-weight: bold;
-	padding: 5px 10px;
-	color: #555 !important;
+	padding: 3px 8px;
+	color: #21759B !important;
 	text-decoration: none !important;
-	background: #d9d9d9; /* fallback color */
-	background:-moz-linear-gradient(bottom,  #d7d7d7,  #e4e4e4);
-	background:-webkit-gradient(linear, left bottom, left top, from(#d7d7d7), to(#e4e4e4));
-	text-shadow: 0 1px 0 #f4f4f4;
+	background: #f1f1f1;
+	text-shadow: 0 1px 0 #fff;
+	-moz-border-radius: 3px;
+	-khtml-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
 }
 #querylist #debug-bar-console-submit:hover {
+	color: #d54e21 !important;
 	background: #e4e4e4; /* fallback color */
 	background:-moz-linear-gradient(bottom,  #e4e4e4,  #d7d7d7);
 	background:-webkit-gradient(linear, left bottom, left top, from(#e4e4e4), to(#d7d7d7));
