--- a/css/iframe.dev.css
+++ b/css/iframe.dev.css
@@ -1,5 +1,7 @@
-/* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
--------------------------------------------------------------- */
+/* =========================================================================
+   Reset default browser CSS.
+   Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
+============================================================================ */
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -45,7 +47,9 @@ a img {
 	border: none;
 }
 
-/* IFRAME STYLES */
+/* =========================================================================
+   IFRAME STYLES
+============================================================================ */
 
 body {
 	padding: 5px;
