--- a/css/debug-bar-console.dev.css
+++ b/css/debug-bar-console.dev.css
@@ -10,11 +10,11 @@
 
 #debug-bar-console-output {
 	position: absolute;
-	top: 10px;
+	top: 35%;
 	bottom: 10px;
 	right: 10px;
-	left: 50%;
-	margin-left: 10px;
+	left: 10px;
+	margin-top: 10px;
 	overflow: hidden;
 }
 
@@ -27,10 +27,10 @@
 #debug-bar-console-wrap {
 	position: absolute;
 	top: 10px;
-	bottom: 10px;
+	bottom: 65%;
 	left: 10px;
-	right: 50%;
-	margin-right: 10px;
+	right: 10px;
+	margin-bottom: 10px;
 }
 
 .debug-bar-console-panel {
