Update CodeMirror to version 2.22.
git-svn-id: https://plugins.svn.wordpress.org/debug-bar-console/trunk@520083 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/debug-bar-console.dev.css
+++ b/css/debug-bar-console.dev.css
@@ -64,6 +64,7 @@
 
 .debug-bar-console-tabs {
 	margin: 0;
+	padding: 0;
 }
 
 .debug-bar-console-tab {
@@ -144,6 +145,7 @@
 	padding: 0;
 }
 
-.CodeMirror {
+#debug-bar-console .CodeMirror,
+#debug-bar-console .CodeMirror-scroll {
 	height: 100%;
 }
